--- a/public/index.html
+++ b/public/index.html
@@ -7,8 +7,9 @@
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
 
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
-    <link href="https://fonts.googleapis.com/css?family=Saira+Semi+Condensed:500" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Saira+Semi+Condensed:500|Encode+Sans:600" rel="stylesheet">
 
+    <script src="https://use.fontawesome.com/4742c459c6.js"></script>
     <script src="https://use.typekit.net/kmv5qdr.js"></script>
     <script>try{Typekit.load({ async: true });}catch(e){}</script>
   </head>
