--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
 
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
-    <link href="https://fonts.googleapis.com/css?family=Saira+Semi+Condensed:500|Encode+Sans:600|Indie+Flower|Roboto+Mono" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Saira+Semi+Condensed:500|Abel|Encode+Sans+Semi+Condensed|Play|Quicksand|Titillium+Web|Encode+Sans:600|Indie+Flower|Roboto+Mono" rel="stylesheet">
 
     <script src="https://use.fontawesome.com/4742c459c6.js"></script>
     <script src="https://use.typekit.net/kmv5qdr.js"></script>
