--- a/public/index.html
+++ b/public/index.html
@@ -8,8 +8,8 @@
 
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
-    <link href="https://fonts.googleapis.com/css?family=Saira+Semi+Condensed:500|Dosis:600|Abel|Encode+Sans+Semi+Condensed|Play|Quicksand|Titillium+Web|Encode+Sans:600|Indie+Flower|Roboto+Mono|Mukta|Roboto|Dosis" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Lato|Maven+Pro|Open+Sans|Dancing+Script:700|Lobster|Rajdhani|Shadows+Into+Light|Shadows+Into+Light+Two|Open+Sans|Gentium+Basic|Playfair+Display rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Saira+Semi+Condensed:500|Open+Sans+Condensed:300|Dosis:600|Abel|Encode+Sans+Semi+Condensed|Play|Quicksand|Titillium+Web|Encode+Sans:600|Indie+Flower|Roboto+Mono|Mukta|Roboto|Dosis" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Lato|Rajdhani:700|Satisfy|Maven+Pro|Open+Sans|Dancing+Script:700|Lobster|Shadows+Into+Light|Shadows+Into+Light+Two|Open+Sans|Gentium+Basic|Playfair+Display rel="stylesheet">
 
 
     <script src="https://use.fontawesome.com/4742c459c6.js"></script>
